prevent banner text from getting cut off on narrow width viewports

--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -20,7 +20,8 @@ section h2 {
 }
 
 .banner {
-  height: 35vh;
+  display: flex;
+  height: auto;
   position: relative;
   overflow: hidden;
 }
@@ -32,6 +33,7 @@ section h2 {
 }
 
 .banner picture {
+  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -44,21 +46,18 @@ section h2 {
 }
 
 .banner-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: var(--spacing-md);
   text-align: center;
   padding: var(--spacing-lg) var(--spacing-mmd) var(--spacing-xxl);
+  margin: auto;
   background-color: rgba(255, 255, 255, 0.25);
   border-radius: var(--border-radius);
   line-height: 1.1;
   text-shadow: 2px 3px 3px var(--color-white);
+  z-index: 1;
 }
 
 @media (prefers-color-scheme: dark) {
